app/static/styles/form.css
form {
    background-color: #fff;
    overflow: hidden;
    margin-left: auto;
    margin-right: auto;
    padding: 3rem 0;
    max-width: 400px;
    min-width: 285px;
    border-radius: 0.5rem;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

input,
select {
    padding: .375rem .75rem;
    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
    border-radius: .4rem;
    border: 1px solid #ced4da;
    color: black;
}

form div {
    width: fit-content;
    margin: auto;
    text-align: left;
}

form div * {
    margin: 8px 0;
}

.mid {
    margin-left: 50%;
    transform: translateX(-50%);
}

table {
    margin: auto;
}

td {
    text-align: initial;
}

